--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# yii console commands
-/yii
-/yii_test
-/yii_test.bat
-
 # phpstorm project files
 .idea
 
@@ -35,9 +30,11 @@ phpunit.phar
 /.vagrant
 
 # ignore generated files
-/frontend/web/index.php
-/frontend/web/index-test.php
-/frontend/web/robots.txt
-/backend/web/index.php
-/backend/web/index-test.php
-/backend/web/robots.txt
+/www/assets
+/www/admin/assets
+/cms/modules/*
+
+# console commands
+/yii
+/yii_test
+/yii_test.bat
